@@ -124,5 +124,44 @@ $arrLangModule = array(
 'Manage External URLs' => 'Administrar URLs Externos',
 'At least 1 used channel must be allowed.' => 'Se debe permitir el uso de al menos 1 canal.',
 'Campaign must allow at least one call retry' => 'Campaña debe permitir al menos un intento de llamada',
+
+'Call File Encoding'    =>  'Codificación de Archivo de Llamadas',
+'Invalid character encoding' => 'Codificación de caracteres inválida',
+'UTF-8'         =>  'UTF-8 - Universal',
+'auto'          =>  'Automático (use con cuidado)',
+'ISO-8859-1'    =>  'ISO-8859-1 - Europa Occidental',
+'ISO-8859-2'    =>  'ISO-8859-2 - Europa Occidental y Central',
+'ISO-8859-3'    =>  'ISO-8859-3 - Europa Occidental and Sur de Europa',
+'ISO-8859-4'    =>  'ISO-8859-4 - Europa Occidental and Países Bálticos',
+'ISO-8859-5'    =>  'ISO-8859-5 - Alfabeto cirílico',
+'ISO-8859-6'    =>  'ISO-8859-6 - Árabe',
+'ISO-8859-7'    =>  'ISO-8859-7 - Griego',
+'ISO-8859-8'    =>  'ISO-8859-8 - Hebreo',
+'ISO-8859-9'    =>  'ISO-8859-9 - Europa Occidental + Turquía',
+'ISO-8859-10'   =>  'ISO-8859-10 - Europa Occidental + Lenguajes Nórdicos',
+'ISO-8859-11'   =>  'ISO-8859-11 - Thai',
+'ISO-8859-13'   =>  'ISO-8859-13 - Lenguajes Bálticos + Polaco',
+'ISO-8859-14'   =>  'ISO-8859-14 - Lenguajes Célticos',
+'ISO-8859-15'   =>  'ISO-8859-15 - ISO-8859-1 + Euro',
+'ISO-8859-16'   =>  'ISO-8859-16 - Lenguajes de Europa Central, Oriental y Sur',
+'EUC-JP'        =>  'EUC-JP - Japonés, Coreano, Chino simplificado',
+'eucJP-win'     =>  'eucJP-win - Japonés, Coreano, Chino simplificado (Windows)',
+'SJIS'          =>  'Shift JIS - Japonés',
+'SJIS-win'      =>  'Shift JIS - Japonés (Windows)',
+'JIS'           =>  'JIS - Japonés',
+'ISO-2022-JP'   =>  'ISO-2022-JP - Japonés',
+'Windows-1251'  =>  'Windows-1251 - Alfabeto cirílico',
+'Windows-1252'  =>  'Windows-1252 - Europa Occidental',
+'EUC-CN'        =>  'EUC-CN - Chino simplificado',
+'CP936'         =>  'CP936 - Chino',
+'HZ'            =>  'HZ - Chino',
+'EUC-TW'        =>  'EUC-TW - Chino (Taiwan)',
+'BIG-5'         =>  'BIG-5 - Chino Tradicional',
+'EUC-KR'        =>  'EUC-KR - Coreano',
+'UHC'           =>  'UHC - Coreano',
+'ISO-2022-KR'   =>  'ISO-2022-KR - Coreano',
+'CP866'         =>  'CP866 - Alfabeto cirílico',
+'KOI8-R'        =>  'KOI8-R - Ruso',
+'ArmSCII-8'     =>  'ArmSCII-8 - Armenio',
 );
 ?>
