@@ -125,5 +125,44 @@ $arrLangModule=array(
 'Manage External URLs' => 'Manage External URLs',
 'At least 1 used channel must be allowed.' => 'At least 1 used channel must be allowed.',
 'Campaign must allow at least one call retry' => 'Campaign must allow at least one call retry',
+
+'Call File Encoding'    =>  'Call File Encoding',
+'Invalid character encoding' => 'Invalid character encoding',
+'UTF-8'         =>  'UTF-8 - Universal',
+'auto'          =>  'Automatic (use with caution)',
+'ISO-8859-1'    =>  'ISO-8859-1 - Western Europe',
+'ISO-8859-2'    =>  'ISO-8859-2 - Western and Central Europe',
+'ISO-8859-3'    =>  'ISO-8859-3 - Western Europe and South European',
+'ISO-8859-4'    =>  'ISO-8859-4 - Western Europe and Baltic countries',
+'ISO-8859-5'    =>  'ISO-8859-5 - Cyrillic alphabet',
+'ISO-8859-6'    =>  'ISO-8859-6 - Arabic',
+'ISO-8859-7'    =>  'ISO-8859-7 - Greek',
+'ISO-8859-8'    =>  'ISO-8859-8 - Hebrew',
+'ISO-8859-9'    =>  'ISO-8859-9 - Western Europe + Turkey',
+'ISO-8859-10'   =>  'ISO-8859-10 - Western Europe + Nordic languages',
+'ISO-8859-11'   =>  'ISO-8859-11 - Thai',
+'ISO-8859-13'   =>  'ISO-8859-13 - Baltic languages + Polish',
+'ISO-8859-14'   =>  'ISO-8859-14 - Celtic languages',
+'ISO-8859-15'   =>  'ISO-8859-15 - ISO-8859-1 + Euro',
+'ISO-8859-16'   =>  'ISO-8859-16 - Central, Eastern and Southern European languages',
+'EUC-JP'        =>  'EUC-JP - Japanese, Korean, Simplified Chinese',
+'eucJP-win'     =>  'eucJP-win - Japanese, Korean, Simplified Chinese (Windows)',
+'SJIS'          =>  'Shift JIS - Japanese',
+'SJIS-win'      =>  'Shift JIS - Japanese (Windows)',
+'JIS'           =>  'JIS - Japanese',
+'ISO-2022-JP'   =>  'ISO-2022-JP - Japanese',
+'Windows-1251'  =>  'Windows-1251 - Cyrillic alphabet',
+'Windows-1252'  =>  'Windows-1252 - Western Europe',
+'EUC-CN'        =>  'EUC-CN - Simplified Chinese',
+'CP936'         =>  'CP936 - Chinese',
+'HZ'            =>  'HZ - Chinese',
+'EUC-TW'        =>  'EUC-TW - Chinese (Taiwan)',
+'BIG-5'         =>  'BIG-5 - Traditional Chinese',
+'EUC-KR'        =>  'EUC-KR - Korean',
+'UHC'           =>  'UHC - Korean',
+'ISO-2022-KR'   =>  'ISO-2022-KR - Korean',
+'CP866'         =>  'CP866 - Cyrillic alphabet',
+'KOI8-R'        =>  'KOI8-R - Russian',
+'ArmSCII-8'     =>  'ArmSCII-8 - Armenian',
 );
 ?>
